[package]
name = "lunate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
mlua = { version = "0.9.8", features = ["luajit"] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
